# cmis-v2

./: .cursorrules  .gitignore  =6.0.0  CHANGELOG.md  CLAUDE.md  CMIS_V3_UPDATE_SUMMARY.md  FILE_ORGANIZATION_COMPLETE.md  NEXT_STEPS.md  README.md  README_v1.md  SEARCH_STRATEGY_V2_TO_V3_MIGRATION.md  UMIS_v9_Architecture_Blueprint_v9.md  UMIS_v9_Architecture_Gap_Analysis.md  UMIS_v9_Implementation_Roadmap_Structure_Analysis.md  UMIS_v9_Structure_Analysis_Detailed_Workflow.md  UMIS_v9_Structure_Analysis_Diagrams.md  V7_Code_Reuse_Analysis.md  cmis.yaml  cursorrules.example  domain_registry.yaml  env.example  examples_structure_analysis_poc.py  fix_yaml.py  pyproject.toml  pytest.ini  requirements.txt  session_summary_202512051421.yaml  session_summary_202512051708.yaml  umis_v9.yaml  umis_v9.yaml.bak  umis_v9_agent_protocols.yaml  umis_v9_domain_AdultLanguage_KR.yaml  umis_v9_domain_B2B_SaaS.yaml  umis_v9_domain_PrivateEducation_KR.yaml  umis_v9_pattern_benchmarks.yaml  umis_v9_philosophy_concept.md  umis_v9_process_phases.yaml  umis_v9_project_context_layer_design.md  umis_v9_roadmap.md  umis_v9_strategic_frameworks.yaml  (+4 more)
cmis_cli/: __init__.py  __main__.py
cmis_core/: actor_resolver.py  belief_engine.py  belief_updater.py  config.py  context_archetype.py  context_binding.py  context_learner.py  digest.py  eval_harness.py  evidence_batch.py  evidence_builder.py  evidence_engine.py  evidence_mapper.py  evidence_parallel.py  evidence_quality.py  evidence_retry.py  evidence_store.py  evidence_validation.py  gap_discoverer.py  graph.py  learning_engine.py  learning_policy.py  (+33 more)
(+687 files in other folders)
